Final Code Updated
Final Code Updated

--- a/azure.html
+++ b/azure.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Looker</title>
+  <title>Azure</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,17 +33,17 @@
 <body>
 
 
-<!-- navigation -->
-<section class="fixed-top navigation">
-  <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
-      <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- navbar -->
-      <div class="collapse navbar-collapse text-center" id="navbar">
+  <!-- navigation -->
+  <section class="fixed-top navigation">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+        <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbar"
+          aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- navbar -->
+        <div class="collapse navbar-collapse text-center" id="navbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
@@ -85,77 +85,79 @@
         </ul>
         <a href="contact.html" class="btn btn-primary ml-lg-1 primary-shadow">Let's Talk</a>
       </div>
-    </nav>
-  </div>
-</section>
-<!-- /navigation -->
+      </nav>
+    </div>
+  </section>
+  <!-- /navigation -->
 
   <!-- about us -->
   <section class="section-lg about pb-0">
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-title">Looker Consulting</h2>
+          <h2 class="section-title">Azure Consulting</h2>
         </div>
         <br>
         <div class="col-lg-12">
           <!-- about video -->
           <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker.jpg" alt="video-thumb">
+            <img class="img-fluid w-100" src="images/what_is_azure.jpg" alt="video-thumb">
           </div>
           <br>
         </div>
 
         <div class="col-lg-12 mb-100">
-          <h4>Looker, built from the ground up on top of the world’s fastest and most recent analytic databases, is a powerful tool that allows users to create interactive data visualization at lightning speed. Looker also provides customizable charting layouts for quickly building reports, so you save time.</h4>
-          <h4>We are DOMO Technology Partner</h4>
+          <h4>Microsoft Azure is a cloud platform that allows businesses to develop and run applications and services on third-party servers, so they don’t need to set up the entire infrastructure themselves. Easily customizable to meet the distinctive needs of a business, the platform is both secure and compliant with industries’ requirements and standards.</h4>
           <br>
-          <h3>What is Looker?</h3>
-          <p>Simply put, Looker is a cloud-based platform that takes business data and visualizes it, giving companies a unified, single source of truth for all their business analytics. Its powerful insights can help organizations explore and reveal patterns in their data.
-            <br>
-          The platform includes embedded analytics, workflow integrations, and custom data apps</p>
-          <h3>How Does Looker Work?</h3>
-          <p>A unique feature of Looker is its modeling language called LookerML. This lightweight, flexible markup language gives teams the power to define the sources for their data and how it’s shared as well as how it’s combined with
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker2.png" alt="looker">
-          </div>
-          </p>
-          <p>other data. As a result, anyone within the organization can create reports and dashboards and access a unified source of data.
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker3.png" alt="looker">
-          </div>
-          </p>
-          <p>Looker is compatible with transactional databases like Oracle and MySQL and the analytical data stores BigQuery, Snowflake, and Redshift. Add-ons for custom data applications and experiences are also available. 
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/Advantages-of-Looker.png" alt="looker">
-          </div>
+
+          <h3>What is Microsoft Azure?</h3>
+          <p>Microsoft Azure is an expansive and evolving collection of cloud services designed to help businesses leverage technology more effectively. It enables these companies to build, manage, and deploy applications on a massive, global network using their favourite tools and frameworks. Our experienced and knowledgeable Azure consultants can help you utilize Azure to take your business to the next level and help your operations run more efficiently.
           </p>
 
-          <h3>Why Use Looker?</h3>
-          <p>Nowadays, companies need flexibility and the ability to customize in order for technical users and business users to collaborate. Looker provides both. Advantages include:
+          <h3>Why choose Microsoft Azure?</h3>
+          <p>Microsoft Azure is the leading enterprise cloud that directly integrates with your existing on-prem Microsoft Technology Stack. It provides a seamless path from a legacy technology infrastructure to a progressive, cloud-first strategy. 
             <br>
 
-          <strong><b>Browser-based:</b> </strong>Since Looker’s entirely web-based, you don’t have to worry about software installation or updates. It also allows for easy content link-sharing. 
-          <br>
-          <strong><b>Multi-cloud friendly:</b> </strong>Looker’s multi-cloud capabilities allow you to easily change where you choose to deploy Looker and which underlying cloud database with no impact on the end user’s experience.
-          <br>
-          <strong><b>Made for everyone: </b></strong>Business intelligence analysts and non-technical users alike can use Looker. Analysts with SQL experience can define and maintain business rules for their organization while less tech-savvy users can access and interact with content relevant to them.
-          <br>
-          <strong><b>Customizable:</b> </strong>Developers can also use the Looker platform to build and deploy their own custom end-to-end applications. Or, they can start with Looker pre-built applications such as web analytics, marketing analytics, and sales analytics.</p>
+          In addition, it allows companies to leverage the flexibility of the cloud to build, test, and deploy systems in a cost-effective and global network. Many of our customers are choosing Azure for a variety of reasons including:
 
-          <br>
-
-          <div class="col-lg-12">
-            <!-- about video -->
+            <ul style="list-style-type:disc;">
+            <li>Simplified disaster recovery model</li>
+            <li>Scalable application hosting</li>
+            <li>Dynamic Infrastructure</li>
+            <li>Reducing the overhead expenses of IT maintenance and replacement</li>
+            <li>Leveraging Microsoft’s secured infrastructure and certifications</li>
+          </ul>
             <div class="about-video">
-              <img class="img-fluid w-100" src="images/domo-example01.jpg" alt="video-thumb">
-            </div>
+            <img class="img-fluid w-100" src="images/banner1.jpg" alt="looker">
           </div>
+          </p>
+
+            <br>
+
+          <h3>Benefits of Microsoft Azure</h3>
+          <p>The proven benefits of Microsoft Azure translate into a 90% adoption by Fortune 500 companies and is one of the many reasons Gartner awarded Microsoft as the leader in Cloud Infrastructure as a Service (IaaS) for six consecutive years. Need more reasons? 
+            <br>
+            <ul style="list-style-type:disc;">
+            <li><strong><b>Flexibility:</b> </strong> Azure’s pay as you go structure, allows the ultimate flexibility to scale on demand for fast-growing start-ups and business fluctuations. You focus on your business, we will handle the infrastructure.</li>
+            <li><strong><b>Compliance: </b></strong>Microsoft’s Azure Blueprint supports stringent compliance and regulatory needs in a dynamic environment. Streamline governmental, financial services, health, media, and manufacturing needs with one resource.</li>
+            <li><strong><b>Security:</b> </strong>Protect your data, apps, and entire infrastructure with state-of-art security, a unified security management system ready to combat any threat environment.</li>
+            <li><strong><b>Storage:</b> </strong> Azure not only stores data but provides global data centres and delivery points for lightning-fast delivery of high-bandwidth content.</li>
+            <li><strong><b>Customize: </b> </strong>You are not limited by the AWS cloud-only approach or forced to pay for costly workarounds. Our Azure consultants can help you build hybrid applications and environments to leverage the best of both worlds.</li>
+          </ul>
+            <div class="about-video">
+            <img class="img-fluid w-100" src="images/Azure-IMAGE-1.png" alt="looker">
+          </div>
+          </p>
+
+         
           <br>
-          <h2 class="elementor-heading-title elementor-size-default">How Do You Get Started with Looker?</h2>
+          <h2 class="elementor-heading-title elementor-size-default">How Do You Get Started with Microsoft Azure?</h2>
 
 
-          <p>Before adopting Looker, first look at where your company’s data is stored, how data is used, stakeholder needs, and address any compliance and data governance concerns. One of our Cloud Experts can help you get started and decide if Looker’s right for your organization. <a href="https://gwcteq.com/contact">Schedule a consultation</a> with us today.</p>
+          <p>Before adopting Microsoft Azure, first look at where your company’s data is stored, how data is used, stakeholder needs, and address any compliance and data governance concerns. 
+
+          One of our Cloud Experts can help you get started and decide if Microsoft Azure’s right for your organization. <a href="https://gwcteq.com/contact">Schedule a consultation</a> with us today.
+        </p>
         </div>
 
       </div>
@@ -173,8 +175,7 @@
   <!-- /about us -->
 
 
-
-  <!-- footer -->
+<!-- footer -->
 <footer class="footer-section footer" style="background-image: url(images/backgrounds/footer-bg.png);">
   <div class="container">
     <div class="row">
@@ -187,7 +188,7 @@
       </div>
       <!-- footer menu -->
       <nav class="col-lg-8 align-self-center mb-5">
-        <ul class="list-inline text-lg-right text-center footer-menu">
+       <ul class="list-inline text-lg-right text-center footer-menu">
           <li class="list-inline-item active"><a href="index.html">Home</a></li>
           <li class="list-inline-item"><a href="about.html">About</a></li>
           <li class="list-inline-item"><a class="page-scroll" href="about.html#team">Team</a></li>
