--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dtox</title>
+  <title>GWC-Contact</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,26 +48,42 @@
           <li class="nav-item">
             <a class="nav-link" href="index.html">Home</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link page-scroll" href="index.html#feature">Feature</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About Us
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="life@gwc.html">Life@GWC</a>
+              <a class="dropdown-item" target="_blan" href="about.html#team">Team</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Partners
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="domo.html">DOMO</a>
+              <a class="dropdown-item" target="_blan" href="zoho-analytics.html">Zoho Analytics</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Resourses
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="case-studies.html">Case Studies</a>
+              <a class="dropdown-item" target="_blan" href="blog.html">Blogs</a>
+            </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link" href="careers.html">Careers</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link" href="service.html">Service</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link page-scroll" href="index.html#team">Team</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link page-scroll" href="index.html#pricing">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
-        <a href="#" class="btn btn-primary ml-lg-3 primary-shadow">Try Free</a>
+        <a href="contact.html" class="btn btn-primary ml-lg-1 primary-shadow">Let's Talk</a>
       </div>
     </nav>
   </div>
@@ -83,42 +99,68 @@
             </div>
         </div>
         <div class="row contact-bg p-5 rounded mb-5">
-            <div class="col-lg-7 mb-4 mb-lg-0">
+            <div class="col-lg-12 mb-4 mb-lg-0">
                 <form action="#">
                     <input type="text" class="form-control mb-3" id="name" name="name" placeholder="Your Name">
                     <input type="email" class="form-control mb-3" id="mail" name="mail" placeholder="Your Email">
                     <input type="text" class="form-control mb-3" id="subject" name="subject" placeholder="Subject">
                     <textarea name="message" id="message" class="form-control mb-3" placeholder="Your Message"></textarea>
-                    <button type="submit" value="send" class="btn btn-secondary">SEND MESSAGE</button>
+                    <button type="submit" value="send" class="btn btn-secondary">Contact Us</button>
                 </form>
             </div>
-            <div class="col-lg-5">
-                <p class="mb-5">If you'll like to know more about our experience designing and delivering cloud solutions, or get advice on your own technology challenges get in touch. With dedicated engineers on-hand 24/7,      we’re set up to become an extension of your team.</p>
-                <a href="tel:+442081446356" class="text-color h5 d-block">+44 20 8144 6356</a>
-                <a href="mailto:info@altostack.io" class="mb-5 text-color h5 d-block">info@altostack.io</a>
-                <p>71 Shelton Street<br>London WC2H 9JQ England</p>
+
+            <div class="col-lg-12" style="background-color: #fff;margin-top:48px;">
+            <div class="row col-lg-12 " style="margin-top:48px;">
+            <div class="col-lg-6" style="text-align: center;">
+              <h5><u>Phone Number</u></h5>
+                <a class="text-color h5 d-block ">+91 95914 33122 / +91 80411 71958</a>
+            </div>
+            <div class="col-lg-6"  style="text-align: center;">
+              <h5><u>Email</u></h5>
+              <a href="mailto:indiahr@gwcteq.com" class="mb-5 text-color h5 d-block" >indiahr@gwcteq.com</a>
+            </div>
+          </div>
+        </div>
+       </div>
+
+       <div class="row justify-content-center" style="margin-top:24px;">
+            <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                <div class="card p-4 border-blue">
+                    <h5><i class="ti-map round-icon blue mr-2"></i> Canada</h5>
+                    <p class="mb-0"> 258 Sorento Street, Ottawa, Ontario, Canada, K2J 0B5</p>
+                    <br>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                <div class="card p-4 border-blue">
+                    <h5><i class="ti-map round-icon green mr-2"></i> Chennai</h5>
+                    <p class="mb-0">Plot S-16, 15th main road , Industrial Estate, Guindy, Chennai, Tamil Nadu, India, 600032</p>
+                </div>
+            </div>
+            <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                <div class="card p-4 border-blue">
+                    <h5><i class="ti-map round-icon orange mr-2"></i> Tirupattur</h5>
+                    <p class="mb-0">3/6, CKC Road, Tirupattur, Tamilnadu, India, 635501</p>
+                    <br>
+                </div>
             </div>
         </div>
-        <div class="row justify-content-center">
+
+        <div class="row justify-content-center" style="margin-top:24px;">
             <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                 <div class="card p-4 border-blue">
-                    <h5><i class="ti-layers-alt round-icon blue mr-2"></i> Sales</h5>
-                    <p class="mb-0">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+                    <h5><i class="ti-map round-icon blue mr-2"></i> Banglore</h5>
+                    <p class="mb-0"> #46/4 Novel Tech Park,Kudlu Gate, Hosur Rd,HSR Extension, Bangalore,Karnataka,India, 560068</p>
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
                 <div class="card p-4 border-blue">
-                    <h5><i class="ti-desktop round-icon green mr-2"></i> Help & Support</h5>
-                    <p class="mb-0">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                <div class="card p-4 border-blue">
-                    <h5><i class="ti-panel round-icon orange mr-2"></i> Legal Departments</h5>
-                    <p class="mb-0">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
+                    <h5><i class="ti-map round-icon green mr-2"></i> Hosur</h5>
+                    <p class="mb-0">3/64, First Floor, Gandhi Nagar Main Road, Opp. Five Star Petrol Bunk, NH Bangalore Road, Hosur-635109</p>
                 </div>
             </div>
         </div>
+
     </div>
     <!-- background shapes -->
     <img class="contact-bg-1 up-down-animation" src="images/background-shape/feature-bg-2.png" alt="background-shape">
@@ -129,6 +171,32 @@
 </section>
 <!-- /contact -->
 
+
+<!-- newsletter -->
+<section class="newsletter">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Subscribe to our newsletter</h2>
+        <p class="mb-5">Receive updates, Events & Newsletters</p>
+      </div>
+      <div class="col-lg-8 col-sm-10 col-12 mx-auto">
+        <form action="#">
+          <div class="input-wrapper position-relative">
+            <input type="email" class="newsletter-form" id="newsletter" placeholder="Enter your email">
+            <button type="submit" value="send" class="btn newsletter-btn">subscribe</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- background shapes -->
+  <img class="newsletter-bg-shape left-right-animation" src="images/background-shape/seo-ball-2.png" alt="background-shape">
+</section>
+<!-- /newsletter -->
+
+
+
 <!-- footer -->
 <footer class="footer-section footer" style="background-image: url(images/backgrounds/footer-bg.png);">
   <div class="container">
@@ -136,6 +204,7 @@
       <div class="col-lg-4 text-center text-lg-left mb-4 mb-lg-0">
         <!-- logo -->
         <a href="index.html">
+          
           <img class="img-fluid" src="images/logo.png" alt="logo">
         </a>
       </div>
@@ -143,29 +212,36 @@
       <nav class="col-lg-8 align-self-center mb-5">
         <ul class="list-inline text-lg-right text-center footer-menu">
           <li class="list-inline-item active"><a href="index.html">Home</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="#feature">Feature</a></li>
           <li class="list-inline-item"><a href="about.html">About</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="#team">Team</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="#pricing">Pricing</a></li>
+          <li class="list-inline-item"><a class="page-scroll" href="about.html#team">Team</a></li>
+          <li class="list-inline-item"><a href="careers.html">Careers</a></li>
+          <li class="list-inline-item"><a class="page-scroll" href="blog.html">Blogs</a></li>
           <li class="list-inline-item"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <!-- footer social icon -->
       <nav class="col-12">
-        <ul class="list-inline text-lg-right text-center social-icon">
-          <li class="list-inline-item">
+
+        <div class="col-md-12 ">
+
+          <ul class="list-inline social-icon text-center">
+          <li class="list-inline-item bottom-border">
             <a class="facebook" href="#"><i class="ti-facebook"></i></a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item bottom-border">
             <a class="twitter" href="#"><i class="ti-twitter-alt"></i></a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item bottom-border">
             <a class="linkedin" href="#"><i class="ti-linkedin"></i></a>
           </li>
-          <li class="list-inline-item">
-            <a class="black" href="#"><i class="ti-github"></i></a>
+          <li class="list-inline-item bottom-border">
+            <a class="instagram" href="#"><i class="ti-instagram"></i></a>
           </li>
         </ul>
+
+         <p style="text-align: center; margin-top: 12px;">Global WeConnect Technologies Pvt Ltd. All Rights Reserved 2022</p>
+
+        </div>
       </nav>
     </div>
   </div>
