--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
               About Us
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" target="_blank" href="lifeatGWC.html">Life@GWC</a>
-              <a class="dropdown-item" target="_blan" href="about.html">Team</a>
+              <a class="dropdown-item" target="_blank" href="life@gwc.html">Life@GWC</a>
+              <a class="dropdown-item" target="_blan" href="about.html#team">Team</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -72,7 +72,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" target="_blank" href="case-studies.html">Case Studies</a>
-              <a class="dropdown-item" target="_blan" href="zoho-analytics.html">Blogs</a>
+              <a class="dropdown-item" target="_blan" href="blog.html">Blogs</a>
             </div>
           </li>
           <li class="nav-item">
@@ -83,7 +83,7 @@
             <a class="nav-link" href="contact.html">Contact Us</a>
           </li>
         </ul>
-        <a href="#" class="btn btn-primary ml-lg-1 primary-shadow">Let's Talk</a>
+        <a href="contact.html" class="btn btn-primary ml-lg-1 primary-shadow">Let's Talk</a>
       </div>
     </nav>
   </div>
@@ -207,7 +207,7 @@
           </div>
           <div>
             <h4>Tableau</h4>
-            <a href="google.com">Learn More </a>
+            <a href="tableau.html">Learn More </a>
           </div>
         </div>
       </div>
@@ -220,7 +220,7 @@
           </div>
           <div>
             <h4>Azure</h4>
-            <a href="google.com">Learn More </a>
+            <a href="azure.html">Learn More </a>
           </div>
         </div>
       </div>
@@ -233,7 +233,7 @@
           </div>
           <div>
             <h4>Boomi</h4>
-            <a href="google.com">Learn More </a>
+            <a href="boomi.html">Learn More </a>
           </div>
         </div>
       </div>
@@ -246,7 +246,7 @@
           </div>
           <div>
             <h4>Zoho Analytics</h4>
-            <a href="google.com">Learn More </a>
+            <a href="zoho-analytics.html">Learn More </a>
           </div>
         </div>
       </div>
@@ -284,7 +284,7 @@
               <h6 class="text-color">Naveen, Founder & CEO, GWC</h6>
             </div>
           </div>
-          <a>Know More ></a>
+          <a href="blog-details.html">Know More ></a>
         </div>
         <!-- team-member -->
  
@@ -297,7 +297,7 @@
               <h6 class="text-color">Programmer</h6>
             </div>
           </div>
-          <a>Know More</a>
+          <a href="blog-details.html">Know More</a>
         </div>
         <!-- team-member -->
         <div class="team-member">
@@ -308,7 +308,7 @@
               <h6 class="text-color">Programmer</h6>
             </div>
           </div>
-          <a>Know More</a>
+          <a href="blog-details.html">Know More</a>
         </div>
         <!-- team-member -->
         <div class="team-member">
@@ -319,7 +319,7 @@
               <h6 class="text-color">Programmer</h6>
             </div>
           </div>
-          <a>Know More</a>
+          <a href="blog-details.html">Know More</a>
         </div>
       </div>
     </div>
@@ -425,33 +425,11 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!-- client logo slider -->
 <section class="section">
 
 </section>
 <!-- /client logo slider -->
-
-
-
-
-
-
-
-
-
 
 <!-- newsletter -->
 <section class="newsletter">
@@ -491,29 +469,36 @@
       <nav class="col-lg-8 align-self-center mb-5">
         <ul class="list-inline text-lg-right text-center footer-menu">
           <li class="list-inline-item active"><a href="index.html">Home</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="#feature">Feature</a></li>
           <li class="list-inline-item"><a href="about.html">About</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="#team">Team</a></li>
-          <li class="list-inline-item"><a class="page-scroll" href="#pricing">Partners</a></li>
+          <li class="list-inline-item"><a class="page-scroll" href="about.html#team">Team</a></li>
+          <li class="list-inline-item"><a href="careers.html">Careers</a></li>
+          <li class="list-inline-item"><a class="page-scroll" href="blog.html">Blogs</a></li>
           <li class="list-inline-item"><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <!-- footer social icon -->
       <nav class="col-12">
-        <ul class="list-inline text-lg-right text-center social-icon">
-          <li class="list-inline-item">
+
+        <div class="col-md-12 ">
+
+          <ul class="list-inline social-icon text-center">
+          <li class="list-inline-item bottom-border">
             <a class="facebook" href="#"><i class="ti-facebook"></i></a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item bottom-border">
             <a class="twitter" href="#"><i class="ti-twitter-alt"></i></a>
           </li>
-          <li class="list-inline-item">
+          <li class="list-inline-item bottom-border">
             <a class="linkedin" href="#"><i class="ti-linkedin"></i></a>
           </li>
-          <li class="list-inline-item">
-            <a class="black" href="#"><i class="ti-github"></i></a>
+          <li class="list-inline-item bottom-border">
+            <a class="instagram" href="#"><i class="ti-instagram"></i></a>
           </li>
         </ul>
+
+         <p style="text-align: center; margin-top: 12px;">Global WeConnect Technologies Pvt Ltd. All Rights Reserved 2022</p>
+
+        </div>
       </nav>
     </div>
   </div>
