--- a/life@gwc.html
+++ b/life@gwc.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Looker</title>
+  <title>GWC</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+  
   <!-- ** Plugins Needed for the Project ** -->
   <!-- Bootstrap -->
   <link rel="stylesheet" href="plugins/bootstrap/bootstrap.min.css">
@@ -23,7 +23,7 @@
 
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
-
+  
   <!--Favicon-->
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-
+  
 
 <!-- navigation -->
 <section class="fixed-top navigation">
@@ -90,91 +90,111 @@
 </section>
 <!-- /navigation -->
 
-  <!-- about us -->
-  <section class="section-lg about pb-0">
+<!-- service -->
+<section class="section-lg service-bg-image position-relative" style="background-image: url(images/backgrounds/service-page.png);">
     <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <h2 class="section-title">Looker Consulting</h2>
-        </div>
-        <br>
-        <div class="col-lg-12">
-          <!-- about video -->
-          <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker.jpg" alt="video-thumb">
+        <div class="row">
+ 
+          <div class="col-lg-12 text-center">
+            <h2 class="section-title">Gallery</h2>
+            <!-- <p class="mb-100">Evaluate capabilities of top BI & Analytics platforms/tools</p> -->
           </div>
-          <br>
-        </div>
 
-        <div class="col-lg-12 mb-100">
-          <h4>Looker, built from the ground up on top of the world’s fastest and most recent analytic databases, is a powerful tool that allows users to create interactive data visualization at lightning speed. Looker also provides customizable charting layouts for quickly building reports, so you save time.</h4>
-          <h4>We are DOMO Technology Partner</h4>
-          <br>
-          <h3>What is Looker?</h3>
-          <p>Simply put, Looker is a cloud-based platform that takes business data and visualizes it, giving companies a unified, single source of truth for all their business analytics. Its powerful insights can help organizations explore and reveal patterns in their data.
-            <br>
-          The platform includes embedded analytics, workflow integrations, and custom data apps</p>
-          <h3>How Does Looker Work?</h3>
-          <p>A unique feature of Looker is its modeling language called LookerML. This lightweight, flexible markup language gives teams the power to define the sources for their data and how it’s shared as well as how it’s combined with
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker2.png" alt="looker">
-          </div>
-          </p>
-          <p>other data. As a result, anyone within the organization can create reports and dashboards and access a unified source of data.
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker3.png" alt="looker">
-          </div>
-          </p>
-          <p>Looker is compatible with transactional databases like Oracle and MySQL and the analytical data stores BigQuery, Snowflake, and Redshift. Add-ons for custom data applications and experiences are also available. 
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/Advantages-of-Looker.png" alt="looker">
-          </div>
-          </p>
 
-          <h3>Why Use Looker?</h3>
-          <p>Nowadays, companies need flexibility and the ability to customize in order for technical users and business users to collaborate. Looker provides both. Advantages include:
-            <br>
 
-          <strong><b>Browser-based:</b> </strong>Since Looker’s entirely web-based, you don’t have to worry about software installation or updates. It also allows for easy content link-sharing. 
-          <br>
-          <strong><b>Multi-cloud friendly:</b> </strong>Looker’s multi-cloud capabilities allow you to easily change where you choose to deploy Looker and which underlying cloud database with no impact on the end user’s experience.
-          <br>
-          <strong><b>Made for everyone: </b></strong>Business intelligence analysts and non-technical users alike can use Looker. Analysts with SQL experience can define and maintain business rules for their organization while less tech-savvy users can access and interact with content relevant to them.
-          <br>
-          <strong><b>Customizable:</b> </strong>Developers can also use the Looker platform to build and deploy their own custom end-to-end applications. Or, they can start with Looker pre-built applications such as web analytics, marketing analytics, and sales analytics.</p>
+          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+              
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100" src="images/curosel/3.jpg" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/curosel/1.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/curosel/2.jpg" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/curosel/4.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/curosel/5.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/curosel/6.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/curosel/7.jpg" alt="Third slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="images/curosel/8.jpg" alt="Third slide">
+              </div>
+         
 
-          <br>
 
-          <div class="col-lg-12">
-            <!-- about video -->
-            <div class="about-video">
-              <img class="img-fluid w-100" src="images/domo-example01.jpg" alt="video-thumb">
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-          <br>
-          <h2 class="elementor-heading-title elementor-size-default">How Do You Get Started with Looker?</h2>
 
 
-          <p>Before adopting Looker, first look at where your company’s data is stored, how data is used, stakeholder needs, and address any compliance and data governance concerns. One of our Cloud Experts can help you get started and decide if Looker’s right for your organization. <a href="https://gwcteq.com/contact">Schedule a consultation</a> with us today.</p>
+
+
         </div>
-
-      </div>
-    </div>
     </div>
     <!-- background shapes -->
-    <img src="images/background-shape/green-dot.png" alt="background-shape" class="about-bg-1 up-down-animation">
-    <img src="images/background-shape/blue-dot.png" alt="background-shape" class="about-bg-2 left-right-animation">
-    <img src="images/background-shape/green-half-cycle.png" alt="background-shape" class="about-bg-3 up-down-animation">
-    <img src="images/background-shape/seo-ball-1.png" alt="background-shape" class="about-bg-4 left-right-animation">
-    <img src="images/background-shape/team-bg-triangle.png" alt="background-shape" class="about-bg-5 up-down-animation">
-    <img src="images/background-shape/service-half-cycle.png" alt="background-shape"
-      class="about-bg-6 left-right-animation">
-  </section>
-  <!-- /about us -->
+    <img class="service-bg-1 up-down-animation" src="images/background-shape/feature-bg-2.png" alt="">
+    <img class="service-bg-2 left-right-animation" src="images/background-shape/seo-half-cycle.png" alt="">
+    <img class="service-bg-3 up-down-animation" src="images/background-shape/team-bg-triangle.png" alt="">
+    <img class="service-bg-4 left-right-animation" src="images/background-shape/green-dot.png" alt="">
+    <img class="service-bg-5 up-down-animation" src="images/background-shape/team-bg-triangle.png" alt="">
+</section>
+<!-- /service -->
 
 
 
-  <!-- footer -->
+
+
+<!-- newsletter -->
+<section class="newsletter">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Subscribe to our newsletter</h2>
+        <p class="mb-5">Receive updates, Events & Newsletters</p>
+      </div>
+      <div class="col-lg-8 col-sm-10 col-12 mx-auto">
+        <form action="#">
+          <div class="input-wrapper position-relative">
+            <input type="email" class="newsletter-form" id="newsletter" placeholder="Enter your email">
+            <button type="submit" value="send" class="btn newsletter-btn">subscribe</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <!-- background shapes -->
+  <img class="newsletter-bg-shape left-right-animation" src="images/background-shape/seo-ball-2.png" alt="background-shape">
+</section>
+<!-- /newsletter -->
+
+<!-- footer -->
 <footer class="footer-section footer" style="background-image: url(images/backgrounds/footer-bg.png);">
   <div class="container">
     <div class="row">
@@ -225,19 +245,20 @@
 </footer>
 <!-- /footer -->
 
-  <!-- jQuery -->
-  <script src="plugins/jQuery/jquery.min.js"></script>
-  <!-- Bootstrap JS -->
-  <script src="plugins/bootstrap/bootstrap.min.js"></script>
-  <!-- slick slider -->
-  <script src="plugins/slick/slick.min.js"></script>
-  <!-- venobox -->
-  <script src="plugins/Venobox/venobox.min.js"></script>
-  <!-- aos -->
-  <script src="plugins/aos/aos.js"></script>
-  <!-- Main Script -->
-  <script src="js/script.js"></script>
+<!-- jQuery -->
+<script src="plugins/jQuery/jquery.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="plugins/bootstrap/bootstrap.min.js"></script>
+<!-- slick slider -->
+<script src="plugins/slick/slick.min.js"></script>
+<!-- venobox -->
+<script src="plugins/Venobox/venobox.min.js"></script>
+<!-- aos -->
+<script src="plugins/aos/aos.js"></script>
+<!-- Main Script -->
+<script src="js/script.js"></script>
+
+<script src="js/gallery.js"></script>
 
 </body>
-
 </html>
