--- a/domo.html
+++ b/domo.html
@@ -33,44 +33,63 @@
 <body>
 
 
-  <!-- navigation -->
-  <section class="fixed-top navigation">
-    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
-        <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbar"
-          aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <!-- navbar -->
-        <div class="collapse navbar-collapse text-center" id="navbar">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About Us</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="partners.html">Partners</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="resources.html">Resources</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="careers.html">Careers</a>
-            </li>
+ 
+<!-- navigation -->
+<section class="fixed-top navigation">
+  <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- navbar -->
+      <div class="collapse navbar-collapse text-center" id="navbar">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              About Us
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="life@gwc.html">Life@GWC</a>
+              <a class="dropdown-item" target="_blan" href="about.html#team">Team</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Partners
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="domo.html">DOMO</a>
+              <a class="dropdown-item" target="_blan" href="zoho-analytics.html">Zoho Analytics</a>
+            </div>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Resourses
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" target="_blank" href="case-studies.html">Case Studies</a>
+              <a class="dropdown-item" target="_blan" href="blog.html">Blogs</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="careers.html">Careers</a>
+          </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
-            </li>
-          </ul>
-          <a href="contact.html" class="btn btn-primary ml-lg-3 primary-shadow">Let's Talk</a>
-        </div>
-      </nav>
-    </div>
-  </section>
-  <!-- /navigation -->
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+        <a href="contact.html" class="btn btn-primary ml-lg-1 primary-shadow">Let's Talk</a>
+      </div>
+    </nav>
+  </div>
+</section>
+<!-- /navigation -->
 
   <!-- about us -->
   <section class="section-lg about pb-0">
@@ -182,59 +201,55 @@
 
 
   <!-- footer -->
-  <footer class="footer-section footer" style="background-image: url(images/backgrounds/footer-bg.png);">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4 text-center text-lg-left mb-4 mb-lg-0">
-          <!-- logo -->
-          <a href="index.html">
-            <img class="img-fluid" src="images/logo.png" alt="logo">
-          </a>
-        </div>
-        <!-- footer menu -->
-        <nav class="col-lg-8 align-self-center mb-5">
-          <ul class="list-inline text-lg-right text-center footer-menu">
-            <li class="list-inline-item active"><a href="index.html">Home</a></li>
-            <li class="list-inline-item"><a class="page-scroll" href="about.html">About Us</a></li>
-
-            <li class="list-inline-item">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                Partners
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="domo.html">DOMO</a>
-                <a class="dropdown-item" href="zoho-analytics.html">Zoho Analytics</a>
-
-              </div>
-            </li>
-
-            <li class="list-inline-item"><a class="page-scroll" href="#team">Resources</a></li>
-            <li class="list-inline-item"><a class="page-scroll" href="#pricing">Careers</a></li>
-            <li class="list-inline-item"><a href="contact.html">Contact Us</a></li>
-          </ul>
-        </nav>
-        <!-- footer social icon -->
-        <nav class="col-12">
-          <ul class="list-inline text-lg-right text-center social-icon">
-            <li class="list-inline-item">
-              <a class="facebook" href="#"><i class="ti-facebook"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a class="twitter" href="#"><i class="ti-twitter-alt"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a class="linkedin" href="#"><i class="ti-linkedin"></i></a>
-            </li>
-            <li class="list-inline-item">
-              <a class="black" href="#"><i class="ti-github"></i></a>
-            </li>
-          </ul>
-        </nav>
+<footer class="footer-section footer" style="background-image: url(images/backgrounds/footer-bg.png);">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4 text-center text-lg-left mb-4 mb-lg-0">
+        <!-- logo -->
+        <a href="index.html">
+          
+          <img class="img-fluid" src="images/logo.png" alt="logo">
+        </a>
       </div>
+      <!-- footer menu -->
+      <nav class="col-lg-8 align-self-center mb-5">
+        <ul class="list-inline text-lg-right text-center footer-menu">
+          <li class="list-inline-item active"><a href="index.html">Home</a></li>
+          <li class="list-inline-item"><a href="about.html">About</a></li>
+          <li class="list-inline-item"><a class="page-scroll" href="about.html#team">Team</a></li>
+          <li class="list-inline-item"><a href="careers.html">Careers</a></li>
+          <li class="list-inline-item"><a class="page-scroll" href="blog.html">Blogs</a></li>
+          <li class="list-inline-item"><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+      <!-- footer social icon -->
+      <nav class="col-12">
+
+        <div class="col-md-12 ">
+
+          <ul class="list-inline social-icon text-center">
+          <li class="list-inline-item bottom-border">
+            <a class="facebook" href="#"><i class="ti-facebook"></i></a>
+          </li>
+          <li class="list-inline-item bottom-border">
+            <a class="twitter" href="#"><i class="ti-twitter-alt"></i></a>
+          </li>
+          <li class="list-inline-item bottom-border">
+            <a class="linkedin" href="#"><i class="ti-linkedin"></i></a>
+          </li>
+          <li class="list-inline-item bottom-border">
+            <a class="instagram" href="#"><i class="ti-instagram"></i></a>
+          </li>
+        </ul>
+
+         <p style="text-align: center; margin-top: 12px;">Global WeConnect Technologies Pvt Ltd. All Rights Reserved 2022</p>
+
+        </div>
+      </nav>
     </div>
-  </footer>
-  <!-- /footer -->
+  </div>
+</footer>
+<!-- /footer -->
 
   <!-- jQuery -->
   <script src="plugins/jQuery/jquery.min.js"></script>
