--- a/tableau.html
+++ b/tableau.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Looker</title>
+  <title>Tableau</title>
 
   <!-- mobile responsive meta -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -95,67 +95,55 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h2 class="section-title">Looker Consulting</h2>
+          <h2 class="section-title">Tableau Consulting</h2>
         </div>
         <br>
         <div class="col-lg-12">
           <!-- about video -->
           <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker.jpg" alt="video-thumb">
+            <img class="img-fluid w-100" src="images/Tableau-image.jpeg" alt="video-thumb">
           </div>
           <br>
         </div>
 
         <div class="col-lg-12 mb-100">
-          <h4>Looker, built from the ground up on top of the world’s fastest and most recent analytic databases, is a powerful tool that allows users to create interactive data visualization at lightning speed. Looker also provides customizable charting layouts for quickly building reports, so you save time.</h4>
-          <h4>We are DOMO Technology Partner</h4>
+          <h4>Tableau is a leading data visualization solution that will change the way you think about data. Blast’s Tableau consulting experts will help you easily connect to your data, create impactful visualizations, and share them across your organization — so you can discover opportunities faster.</h4>
           <br>
-          <h3>What is Looker?</h3>
-          <p>Simply put, Looker is a cloud-based platform that takes business data and visualizes it, giving companies a unified, single source of truth for all their business analytics. Its powerful insights can help organizations explore and reveal patterns in their data.
-            <br>
-          The platform includes embedded analytics, workflow integrations, and custom data apps</p>
-          <h3>How Does Looker Work?</h3>
-          <p>A unique feature of Looker is its modeling language called LookerML. This lightweight, flexible markup language gives teams the power to define the sources for their data and how it’s shared as well as how it’s combined with
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker2.png" alt="looker">
+
+          <h3>Enter Tableau Software Consulting</h3>
+          <p>As one of the leading data visualization solution providers, Tableau delivers innovative software that helps you more quickly and easily gain actionable insights from your vast data. By seamlessly connecting all your data sources — Oracle, SQL Server, Redshift, PostgreSQL, Google Analytics and BigQuery, Vertica, Hadoop, Salesforce, CSV/Text/Excel, and more — Tableau enables you to:
+              <ul style="list-style-type:disc;">
+            <li>More deeply explore your data</li>
+            <li>Discover and share insights quickly</li>
+            <li>Spot trends and outliers</li>
+            <li>Identify opportunities and threats</li>
+            <li>Answer in-depth questions</li>
+            <li>Create interactive presentations</li>
+            <li>Tell stories through data and narration</li>
+            <li>Make data-guided decisions</li>
+          </ul>
+          <div class="about-video">
+            <img class="img-fluid w-100" src="images/image-2.png" alt="looker">
           </div>
           </p>
-          <p>other data. As a result, anyone within the organization can create reports and dashboards and access a unified source of data.
+          <h3>Analyze Data and Get Insights Faster with Tableau</h3>
+          <p>Static data tables and charts are dead. You need visual analytics to more quickly gain insights in a simple and meaningful way. When your data is transformed into a visual story, it becomes intuitive, engaging, and useful
             <div class="about-video">
-            <img class="img-fluid w-100" src="images/looker3.png" alt="looker">
+            <img class="img-fluid w-100" src="images/dasboard-tableau.png" alt="looker">
           </div>
           </p>
-          <p>Looker is compatible with transactional databases like Oracle and MySQL and the analytical data stores BigQuery, Snowflake, and Redshift. Add-ons for custom data applications and experiences are also available. 
-            <div class="about-video">
-            <img class="img-fluid w-100" src="images/Advantages-of-Looker.png" alt="looker">
-          </div>
-          </p>
-
-          <h3>Why Use Looker?</h3>
-          <p>Nowadays, companies need flexibility and the ability to customize in order for technical users and business users to collaborate. Looker provides both. Advantages include:
-            <br>
-
-          <strong><b>Browser-based:</b> </strong>Since Looker’s entirely web-based, you don’t have to worry about software installation or updates. It also allows for easy content link-sharing. 
+         
           <br>
-          <strong><b>Multi-cloud friendly:</b> </strong>Looker’s multi-cloud capabilities allow you to easily change where you choose to deploy Looker and which underlying cloud database with no impact on the end user’s experience.
-          <br>
-          <strong><b>Made for everyone: </b></strong>Business intelligence analysts and non-technical users alike can use Looker. Analysts with SQL experience can define and maintain business rules for their organization while less tech-savvy users can access and interact with content relevant to them.
-          <br>
-          <strong><b>Customizable:</b> </strong>Developers can also use the Looker platform to build and deploy their own custom end-to-end applications. Or, they can start with Looker pre-built applications such as web analytics, marketing analytics, and sales analytics.</p>
-
-          <br>
-
-          <div class="col-lg-12">
-            <!-- about video -->
-            <div class="about-video">
-              <img class="img-fluid w-100" src="images/domo-example01.jpg" alt="video-thumb">
-            </div>
-          </div>
-          <br>
-          <h2 class="elementor-heading-title elementor-size-default">How Do You Get Started with Looker?</h2>
+          <h2 class="elementor-heading-title elementor-size-default">Tableau Consulting Expertise Delivered by GWC</h2>
 
 
-          <p>Before adopting Looker, first look at where your company’s data is stored, how data is used, stakeholder needs, and address any compliance and data governance concerns. One of our Cloud Experts can help you get started and decide if Looker’s right for your organization. <a href="https://gwcteq.com/contact">Schedule a consultation</a> with us today.</p>
+          <p>As a certified Tableau Consulting partner, GWC has the experience and expertise to help you get the most out of your Tableau investment.
+
+          Our Tableau Certified Professionals have advanced knowledge and skills in Tableau Desktop and the ability to apply visual analytics methodologies to help you see and understand data.
+
+          Our Tableau Qualified Associates offer technical expertise and a comprehensive understanding of Tableau functionality to ensure the tool is addressing your business    needs
+
+          <a href="https://gwcteq.com/contact">Schedule consultation</a> to know more.</p>
         </div>
 
       </div>
@@ -174,7 +162,7 @@
 
 
 
-  <!-- footer -->
+ <!-- footer -->
 <footer class="footer-section footer" style="background-image: url(images/backgrounds/footer-bg.png);">
   <div class="container">
     <div class="row">
