--- a/blog-details.html
+++ b/blog-details.html
@@ -38,7 +38,7 @@
 <section class="fixed-top navigation">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/logo-svg.svg" alt="logo"></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -186,7 +186,7 @@
         <!-- logo -->
         <a href="index.html">
           
-          <img class="img-fluid" src="images/logo.png" alt="logo">
+          <img class="img-fluid" src="images/logo-svg.svg" alt="logo">
         </a>
       </div>
       <!-- footer menu -->
