--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 <section class="fixed-top navigation">
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
+      <a class="navbar-brand" href="index.html"><img src="images/logo-svg.svg" alt="logo"></a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -159,6 +159,12 @@
                     <p class="mb-0">3/64, First Floor, Gandhi Nagar Main Road, Opp. Five Star Petrol Bunk, NH Bangalore Road, Hosur-635109</p>
                 </div>
             </div>
+            <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                <div class="card p-4 border-blue">
+                    <h5><i class="ti-map round-icon green mr-2"></i> Paramathi Velur</h5>
+                    <p class="mb-0">1st Floor, Thaer kadai building, High school Road, Paramathi velur, Namakkal (dt), Tamilnadu, 637207</p>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -205,7 +211,7 @@
         <!-- logo -->
         <a href="index.html">
           
-          <img class="img-fluid" src="images/logo.png" alt="logo">
+          <img class="img-fluid" src="images/logo-svg.svg" alt="logo">
         </a>
       </div>
       <!-- footer menu -->
